<resources>
    <string name="app_name">Stress Monitor</string>
    <string name="unknown_le_device">UNKNOWN</string>
    <string name="error_bluetooth_not_supported">Device does not support bluetooth!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="bpm_initial">0</string>
    <string name="bpm_average_label">Average BPM:</string>
    <string name="label_welcome">Welcome to the \nWearables Stress Monitor App</string>
    <string name="label_start_scan">Start Bluetooth Scan</string>
    <string name="bpm_median_label">Median BPM</string>

    <!--Login/Register labels-->
    <string name="registration_label">Registration</string>
    <string name="name_label">Name</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="link_login_label">Already Registered? Login</string>
    <string name="link_register_label">Not a member? Register</string>
    <string name="link_forgot_login_label">Return to Login</string>
    <string name="forgot_password_instr">Please enter your email address \n
        to reset your password</string>

    <string name="info_label">About You</string>
    <string name="info_instr">Please enter more about yourself</string>
    <string name="birthday_label">Birthday</string>
    <string name="phone_number_label">Phone Number</string>

    <!--Button Labels-->
    <string name="login_btn_label">Login</string>
    <string name="register_btn_label">Register</string>
    <string name="forgot_password_btn_label">Send</string>
    <string name="submit_info_btn_label">Submit</string>

    <string name="action_settings">Settings</string>

    <string name="device_connected">Device Connected</string>
    <string name="device_disconnected">Device Disconnected</string>

    <string-array name="drawer_menu">
        <item>Profile</item>
        <item>Contact Support</item>
    </string-array>
    <string name="profile_label">Profile</string>
    <string name="contact_label">Contact Support</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="home_drawer">Home</string>
    <string name="profile_drawer">Profile</string>
    <string name="contact_drawer">Contact Support</string>
    <string name="phone_number">(555) 555-5555</string>
    <string name="call_us">Call Us</string>
    <string name="email_address">support@help.com</string>
    <string name="email_us">Email Us</string>

</resources>
