<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="person" type="edu.rit.wic.stressmonitor.requery.model.Person"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Load the toolbar here -->
            <include
                layout="@layout/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30dp"
                android:paddingBottom="10dp"
                android:text="@string/info_label"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/info_instr"
                android:textAlignment="center" />

            <EditText android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="textPersonName"
                android:hint="@string/first_name_label" />

            <EditText android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="textPersonName"
                android:hint="@string/last_name_label" />

            <EditText android:id="@+id/input_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="date"
                android:hint="@string/birthday_label"
                android:focusable="false"/>
            <!--<Button android:id="@+id/input_birthday"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/birthday_label"-->
                <!--android:onClick="showDatePickerDialog" />-->

            <EditText android:id="@+id/input_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="phone"
                android:hint="@string/phone_number_label" />

            <Spinner android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <Spinner android:id="@+id/ethnicity_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <Button android:id="@+id/btn_submit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/submit_info_btn_label" />

            <TextView android:id="@+id/link_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/link_login_label" />

        </LinearLayout>
    </ScrollView>
</layout>