<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Load the toolbar here -->
        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/live_chart_view"
                android:layout_width="match_parent"
                android:layout_height="379dp" />

        <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="#90909090"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/bpm_average_label"
                        android:id="@+id/bpm_average_label"
                        android:layout_weight="0.15"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:id="@+id/bpm_average"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm_initial"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textAlignment="center" />
                </LinearLayout>
            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="#90909090"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/bpm_median_label"
                        android:id="@+id/bpm_median_label"
                        android:layout_weight="0.15"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:id="@+id/bpm_median"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm_initial"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textAlignment="center" />

                </LinearLayout>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="#90909090"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/app_name"
                        android:id="@+id/stress"
                        android:layout_weight="0.15"
                        android:textAlignment="textEnd" />

                    <TextView
                        android:id="@+id/stress_level"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm_initial"
                        android:layout_marginBottom="15dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textAlignment="center" />
                </LinearLayout>

            <View
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:background="#90909090"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>